# grids-service

./: .gitignore  .pdm-python  .pre-commit.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: __app_configs.py  __configs.py  __exceptions.py
src/__fixtures/: configs.py  grids.py
src/controllers/: account.py  account_impl.py  config_impl.py  configs.py  grids.py  groups.py  query_req.py  volumes_impl.py
src/database/: main.py  models.py
src/models/: account.py  configs.py  delivery.py  grids.py  groups.py  query_req.py  volume.py
src/routers/: account.py  configs.py  grids.py  groups.py  volumes.py
src/server/: main.py
src/utils/: logger.py
