[project]
name = "grids-service-python"
version = "0.1.0"
description = "Service to manage grids configuration for clients"
authors = [
    {name = "Lukasz Chmielewski", email = "lukchm94@gmail.com"},
    {name = "Lukasz Ch", email = "104908677+lchmielewskistuart@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "stuart"
url = "https://nexus.internal.stuart.com/repository/pypi-group/simple/"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "typing_extensions>=4.9.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "mysql-connector-python>=4.0.0",
    "pytest==7.2.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0"
]